@@ -214,6 +214,12 @@ F:scenario if you encounter it.
   [ '' != bar -a '' = '' ]
 0:strings with `[' builtin
 
+  [ zzd '>' zzb -a e '<' x ]
+0:string comparisons with `[' builtin
+
+  [ -o \> -a ]
+0:string comparison with strings that look like operators
+
   [ `echo 0` -lt `echo 1` ]
 0:substitution in `[' builtin
 
