@@ -1,5 +1,8 @@
 2025-11-24  Oliver Kiddle  <opk@zsh.org>
 
+	* 54103: Src/builtin.c, Src/parse.c, Test/C02cond.ztst:
+	support > and < comparisons via the test builtin
+
 	* 54094: Completion/Unix/Command/_base64,
 	Completion/Unix/Command/_basename, Completion/Unix/Command/_cat,
 	Completion/Unix/Command/_chmod, Completion/Unix/Command/_chown,
